Fix the scrollbar issue in widget container (#1016)
* fix the scrollbar issue in widget container

* move scrollbar to widget content

--- a/src/sql/parts/dashboard/contents/widgetContent.css
+++ b/src/sql/parts/dashboard/contents/widgetContent.css
@@ -7,3 +7,12 @@ widget-content {
 	height: 100%;
 	width: 100%;
 }
+
+.scroll-container {
+	height: 100%;
+	width: 100%;
+}
+
+.scrollable {
+	position: relative;
+}
